# ai-ask-about-me

./: .gitignore  README.md  app.py  pyproject.toml
ai_ask_about_me/: __init__.py  agent.py  constants.py  models.py
ai_ask_about_me/tools/: __init__.py  pushover.py  recording.py  schemas.py
me/: summary.txt
